@@ -195,7 +195,7 @@ Acceptance: 1 Inf(0)
 properties: trans-labels explicit-labels trans-acc complete
 --BODY--
 State: 0
-[t] 1 {0}
+[t] 1
 State: 1
 [t] 1
 [0] 1 {0}
