@@ -110,6 +110,11 @@ New in spot 2.5.3.dev  (not yet released)
     The code was buggy, hard to maintain, and these functions do not
     seem to be used.
 
+  - spot::remove_alternation() was slightly improved on very-weak
+    alternating automata: the labeling of the outgoing transitions in
+    the resulting TGBA makes it more likely that simulation-based
+    reductions will reduce it.
+
   Python:
 
   - New spot.jupyter package.  This currently contains a function for
